Bug 399766 - Subwindow right-click menu options gradually disappear when switching between different subwindows
Summary: Subwindow right-click menu options gradually disappear when switching between...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-13 17:50 UTC by 8172635
Modified: 2018-11-20 08:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Menu options disappearing (141.75 KB, video/mp4)
2018-10-13 17:50 UTC, 8172635
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 8172635 2018-10-13 17:50:15 UTC
Created attachment 115631 [details]
Menu options disappearing

Version: 4.2.0-pre-alpha (git 2de0218)

SUMMARY
Everytime the user switches between the active subwindows, one of the subwindow's right-click menu options disappears (see the attached video).
Comment 1 mvowada 2018-10-13 18:07:01 UTC
(I can reproduce this on Linux Ubuntu as well)
Comment 2 Halla Rempt 2018-10-13 18:17:01 UTC
Thanks for reportin
Comment 3 Halla Rempt 2018-10-14 08:18:56 UTC
Git commit d8f36ff9571da4f4898d9626dd37f533897ce5d8 by Boudewijn Rempt.
Committed on 14/10/2018 at 08:17.
Pushed by rempt into branch 'master'.

Only delete the last action in the subwindow menu

M  +1    -1    libs/ui/KisMainWindow.cpp

https://commits.kde.org/krita/d8f36ff9571da4f4898d9626dd37f533897ce5d8
Comment 4 Halla Rempt 2018-11-20 08:57:00 UTC
Git commit 671b24217633519a2ff2d1c38ad7993e87a12562 by Boudewijn Rempt.
Committed on 20/11/2018 at 08:21.
Pushed by rempt into branch 'krita/4.1'.

Only delete the last action in the subwindow menu

M  +1    -1    libs/ui/KisMainWindow.cpp

https://commits.kde.org/krita/671b24217633519a2ff2d1c38ad7993e87a12562