Only delete the last action in the subwindow menu

BUG:399766